# rushabhshah_GenAI_Projects

./: requirements.txt
blog_generator/: .gitignore  Readme.md  main.py  requirements.txt
chat_with_website/: app.py
llm_chatbot/: README.md  main.py  pyproject.toml  requirements.txt
ollama_chatbot/: README.md  main.py  requirements.txt
